# unfer

./: .envrc-cuda  .gitignore  AGENTS.md  Cargo.toml  Hamiltonian Not Essentially Self-Adjoint_  Operator Is Essentially Self-Adjoint  PLAN.md  PLAN_parallel_unfer.md  QFM.tex  QFMplan.md  QMF.tex  QMFplan.md  README.md  book.tex  flake.nix  generate_corpus.py  repomix-output.xml
.github/workflows/: ci.yml
bayes_update_module/: module.toml  run_demo.sh
bayes_update_module/src/: BayesUpdateModule.aui  BayesUpdateModule.aum
demo_module/: build.sh  module.toml  run_demo.sh
demo_module/data_source/: Cargo.toml  module.toml
demo_module/data_source/src/: main.rs
demo_module/src/: DemoModule.aui  DemoModule.aum  LeakDemo.aui  LeakDemo.aum  RecordCheck.aui  RecordCheck.aum
docs/: ARCHITECTURE.md  BUILD_PIPELINE.md  ENG_PLAN.md  IMPLEMENTATION_PLAN.md  MODULES.md  MODULE_RECIPE.md  PROTOCOL.md  QFM_TEXT_HRM_PLAN.md  QFM_TEXT_STATUS.md  QUEPAXA_PLAN.md  SINGULARITY_DETECTION_PLAN.md  TUTORIAL.md  altgit.md  quepaxa.md
fock_sirk/: Cargo.toml  README.md  build.rs
fock_sirk/benches/: sirk.rs  sirk_cuda.rs
fock_sirk/examples/: anharmonic_oscillator.rs  debug_cuda.rs  fermionic_hopping.rs  free_em_field.rs  navier_stokes.rs  simulation.rs  yang_mills.rs
fock_sirk/src/: brst.rs  device.rs  evolve.rs  forward_sirk.rs  lib.rs  linalg.rs  registry.rs  tensor_state.rs
iterated_bayes_module/: build.sh  module.toml  run_demo.sh
iterated_bayes_module/src/: BayesUpdateModule.aum  IteratedBayesModule.aui  IteratedBayesModule.aum
logos/: Cargo.toml
logos/corpus/: lexicon.tsv
logos/corpus/l0_seed/: corpus.jsonl
logos/corpus/l0_ungrammatical/: corpus.jsonl
logos/docs/: L0_GRAMMAR.md
logos/src/: lib.rs  main.rs
logos/src/austral_codegen/: mod.rs
logos/src/ccg/: compiler.rs  mod.rs  parser.rs  types.rs
logos/src/cli/: mod.rs
logos/src/core_ir/: compiler.rs  linearity.rs  mod.rs  types.rs
logos/src/deltanet/: compiler.rs  mod.rs  readback.rs  reducer.rs  types.rs  unf.rs
logos/src/harper_gate/: mod.rs
logos/src/l1/: mod.rs
logos/src/lexicon/: mod.rs
logos/tests/: integration.rs
nested_fock_algebra/: Cargo.toml
nested_fock_algebra/src/: bin.rs  cas.rs  field_theory.rs  latex.rs  lib.rs  models.rs  typst_math.rs  unit_tests.rs
ode_sirk/: Cargo.toml
ode_sirk/src/: change_of_vars.rs  esa.rs  flow.rs  hamiltonian.rs  lib.rs  ode.rs  poly.rs  protocol.rs  report.rs  result.rs  singularity.rs
prob_kernel/: Cargo.toml
prob_kernel/src/: build.rs  error.rs  event.rs  lib.rs  session.rs
prob_kernel/tests/: session.rs
qfm/: Cargo.toml
qfm/benches/: pipeline.rs
qfm/scripts/: make_cifar10_fixture.py
qfm/src/: bayes.rs  heavy_hitters.rs  lib.rs  observables.rs  pipeline.rs  potential.rs  sketch.rs
qfm/testdata/: cifar10_16x16_256training.json  cifar10_16x16_8heldout.json  mnist_8x8_15training.json  mnist_8x8_5digits.json  mnist_8x8_5heldout.json  mnist_8x8_65training.json
qfm/tests/: cfd_kolmogorov_validation.rs  cifar10_real_validation.rs  cifar10_validation.rs  d1024_cross_domain_scaling.rs  gravitational_waveform_validation.rs  ising2d_validation.rs  large_parity_classification.rs  mnist_classification.rs  mnist_validation.rs  parity_classification.rs  rank_truncation.rs  sentiment_classification.rs
qfm_module/: build.sh  module.toml  run_demo.sh
qfm_module/src/: QfmModule.aui  QfmModule.aum
qfm_text/: Cargo.toml  README.md
qfm_text/docs/: rev37_l1vac_results.md  rev37_oxieml_plan.md  rev37_oxieml_plan_v2.md  rev37_oxieml_plan_v3.md  rev37_phase3_results.md
qfm_text/examples/: diag_l1vac.rs  diag_outer_vacuum.rs
qfm_text/scripts/: fetch_hrm_text.sh  generate_fixtures.sh  prepare_corpus.py  prepare_corpus.sh
qfm_text/src/: accumulate.rs  config.rs  corpus.rs  error.rs  features.rs  fixtures.rs  incontext.rs  lib.rs  lm.rs  model.rs  oxieml_decoder.rs  registry.rs
qfm_text/testdata/: README.md
qfm_text/tests/: atomic_components.rs  dense_w_krylov.rs  integration.rs  oxieml_fit_real_w.rs  print_c0.rs  smoothing_invariants.rs
qfm_text_runs/m32/: metrics.ndjson
qfm_text_runs/m32_prefix/: metrics.ndjson
qfm_text_runs/m8/: metrics.ndjson
qfm_text_runs/m8_bigblocks_v2/: metrics.ndjson
qfm_text_runs/m8_hasher_1M_shard0/: metrics.ndjson
qfm_text_runs/m8_hasher_1M_shard0_v2/: metrics.ndjson
qfm_text_runs/m8_inputbasis_shard0/: metrics.ndjson  train.toml
qfm_text_runs/m8_l10_l11_shard0/: metrics.ndjson
qfm_text_runs/m8_l1vac_shard0/: metrics.ndjson  train.toml
qfm_text_runs/m8_lambda0_shard0/: metrics.ndjson
qfm_text_runs/m8_lambda1e6_shard0/: metrics.ndjson
qfm_text_runs/m8_nohash_shard0/: metrics.ndjson
qfm_text_runs/m8_nohash_shard0_v3/: metrics.ndjson
qfm_text_runs/m8_prefix/: metrics.ndjson
qfm_text_runs/m8_uniform_outervac_shard0/: metrics.ndjson  train.toml
qfm_text_runs/m8_uniformvac_shard0/: metrics.ndjson  train.toml
qfm_tomo_module/: build.sh  module.toml  run_demo.sh
qfm_tomo_module/src/: QfmTomoModule.aui  QfmTomoModule.aum
scratch/: test_expand.rs
tools/: module_builder
unfer_consensus/: Cargo.toml
unfer_consensus/src/: engine.rs  identity.rs  lib.rs  node.rs  signing.rs
unfer_data/: Cargo.toml
unfer_data/src/: chunk.rs  crypto.rs  lib.rs  magnet.rs  publisher.rs
unfer_edge/: Cargo.toml
unfer_edge/src/: filter.rs  main.rs  mask.rs
unfer_ffi/: Cargo.toml  EXPECTED_SYMBOLS.txt  EXPECTED_SYMBOLS_ZENODO.txt
unfer_ffi/include/: unfer_kernel.h
unfer_ffi/src/: handles.rs  lib.rs  zenodo.rs
unfer_ffi/tests/: ffi.rs
unfer_identity/: Cargo.toml
unfer_identity/src/: lib.rs
unfer_nixvm/: README.md  flake.nix
unfer_protocol/: Cargo.toml
unfer_protocol/src/: codes.rs  lib.rs  types.rs
unfer_protocol/tests/: protocol.rs
zenodo_store_module/: module.toml  run_demo.sh
zenodo_store_module/src/: ZenodoStoreDemo.aui  ZenodoStoreDemo.aum
