[workspace]
resolver = "2"
members = ["fock_sirk", "nested_fock_algebra", "unfer_protocol", "prob_kernel", "unfer_ffi"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
num-complex = "0.4.6"
nalgebra = "0.34.2"
rayon = "1.12.0"
thiserror = "2.0.18"
anyhow = "1.0.102"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
candle-core = { version = "0.8.4", default-features = false }
mathhook = "0.2.0"


