[package]
name = "ode_sirk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ODE→Hamiltonian Weyl quantization with Nelson ESA detection for SIRK."

[dependencies]
nested_fock_algebra = { path = "../nested_fock_algebra" }
num-complex = { workspace = true }
nalgebra = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quantrs2-symengine-pure = "0.1.3"
