[package]
name = "qfm"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nested_fock_algebra = { path = "../nested_fock_algebra" }
fock_sirk = { path = "../fock_sirk" }
candle-core = { workspace = true }
nalgebra = { workspace = true }
num-complex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
