[package]
name = "unfer_edge"
version.workspace = true
edition = "2021"
description = "Security-first Pingora proxy fronting the unfer_agent NDJSON loop."

[features]
default = ["pingora"]
pingora = ["dep:pingora", "dep:pingora-core", "dep:pingora-proxy", "dep:pingora-http", "dep:async-trait"]

[[bin]]
name = "unfer_edge"
path = "src/main.rs"
required-features = ["pingora"]

[dependencies]
unfer_protocol = { path = "../unfer_protocol" }
pingora = { version = "0.8.1", features = ["proxy"], optional = true }
pingora-core = { version = "0.8.1", optional = true }
pingora-proxy = { version = "0.8.1", optional = true }
pingora-http = { version = "0.8.1", optional = true }
async-trait = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"

[dev-dependencies]
