[package]
name = "unfer_protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared serde contract for the unfer kernel: types, UK-#### codes, and repair hints."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
